# bevy_tilemap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lints.yml  macos-ci.yml  macos.yml  notes.md  rust.yml  tests.yml  ubuntu-ci.yml  ubuntu.yml  windows-ci.yml  windows.yml
crates/sprite_sheet/src/: lib.rs  sprite_sheet.rs
crates/types/: Cargo.toml
crates/types/src/: dimension.rs  lib.rs  point.rs  prelude.rs
doc/: release_procedure.md
docs/: release_procedure.md
examples/: Cargo.toml  README.md  hex_tile_even_cols.rs  hex_tile_even_rows.rs  hex_tile_odd_cols.rs  hex_tile_odd_rows.rs  hex_tile_x.rs  hex_tile_y.rs  hex_x.rs  hex_y.rs  physics_dungeon.rs  random_dungeon.rs  random_world.rs  square_tile.rs  stress_dwarves.rs
examples/examples/: hex_tile_even_cols.rs  hex_tile_even_rows.rs  hex_tile_odd_cols.rs  hex_tile_odd_rows.rs  hex_tile_x.rs  hex_tile_y.rs  physics_dungeon.rs  random_dungeon.rs  random_world.rs  sprite_dungeon.rs  square_tile.rs  stress_dwarves.rs
src/: chunk.rs  coord.rs  default_plugin.rs  dimension.rs  dimensions.rs  entity.rs  event.rs  lib.rs  map.rs  mesh.rs  point.rs  prelude.rs  system.rs  tile.rs  tile_setter.rs  tilemap.rs
src/chunk/: entity.rs  layer.rs  mesh.rs  mod.rs  raw_tile.rs  render.rs  system.rs
src/chunk/render/: mod.rs  tilemap-hex-x.vert  tilemap-hex-y.vert  tilemap-hexcols-even.vert  tilemap-hexcols-odd.vert  tilemap-hexrows-even.vert  tilemap-hexrows-odd.vert  tilemap-square.vert  tilemap.frag
src/chunk/render_native/: tilemap-hexrows-even.vert  tilemap.frag
src/chunk/render_web/: tilemap-hex-x.vert  tilemap-hex-y.vert  tilemap-hexcols-even.vert  tilemap-hexcols-odd.vert  tilemap-hexrows-even.vert  tilemap-hexrows-odd.vert  tilemap-square.vert  tilemap.frag
src/render/: mod.rs  tile_map.vert  tilemap-hex-x-left.vert  tilemap-hex-x.vert  tilemap-hex-y-left.vert  tilemap-hex-y-right.vert  tilemap-hex-y.vert  tilemap-hexcols-even.vert  tilemap-hexcols-odd.vert  tilemap-hexrows-even.vert  tilemap-hexrows-odd.vert  tilemap-square.vert  tilemap.vert
