[package]
name = "bevy_tilemap"
version = "0.3.1"
authors = ["Joshua J. Bouw <dev@joshuajbouw.com>"]
edition = "2018"
description = "Tilemaps with chunks for the Bevy game engine, a simple-driven game engine and app framework"
repository = "https://github.com/joshuajbouw/bevy_tilemap"
license = "MIT"
keywords = ["game", "engine", "bevy", "tiles", "tilemap"]
categories = ["game-engines", "graphics", "gui"]
readme = "README.md"
documentation = "https://docs.rs/bevy_tilemap/latest/bevy_tilemap/"
exclude = ["assets/**/*", ".github/**/*", "doc/**/*"]

[package.metadata.docs.rs]
features = ["serialize", "types"]

[features]
default = ["types", "serialize"]

# crate
types = []

# serde
serialize = ["bevy_tilemap_types/serialize", "serde"]

[workspace]
members = ["library/*", "examples"]

[patch.crates-io]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_diagnostic = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_gilrs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_sprite = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_wgpu = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_winit = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

[dependencies]
bevy_app = "0.4"
bevy_asset = "0.4"
bevy_core = "0.4"
bevy_ecs = "0.4"
bevy_log = "0.4"
bevy_math = "0.4"
bevy_render = "0.4"
bevy_reflect = "0.4"
bevy_sprite = "0.4"
bevy_tilemap_types = { path = "library/types", version = "0.4" }
bevy_transform = "0.4"
bevy_utils = "0.4"
bevy_window = "0.4"
bitflags = "1.2"
hexasphere = "3.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bevy_core = "0.4"
