[package]
name = "bevy_tilemap"
version = "0.4.0"
authors = ["Joshua J. Bouw <dev@joshuajbouw.com>"]
edition = "2021"
description = "Tilemaps with chunks for the Bevy game engine, a simple-driven game engine and app framework"
repository = "https://github.com/joshuajbouw/bevy_tilemap"
license = "MIT"
keywords = ["game", "engine", "bevy", "tiles", "tilemap"]
categories = ["game-engines", "graphics", "gui"]
readme = "README.md"
documentation = "https://docs.rs/bevy_tilemap/latest/bevy_tilemap/"
exclude = ["assets/**/*", ".github/**/*", "doc/**/*"]

[package.metadata.docs.rs]
features = ["serialize", "types"]

[features]
default = ["types"]

# crate
types = []

[workspace]
members = ["library/*"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_tilemap_types = { path = "library/types", version = "0.4" }
bitflags = "1.3"
hexasphere = "7.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy_core = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
rand = "0.8"
